--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "friendsofphp/php-cs-fixer": "^3.13"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "phpstan/phpstan": "^1.9"
     }
 }
